--- a/server/package.json
+++ b/server/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/victoroliveirab/guess-and-draw/issues"
   },
-  "homepage": "https://github.com/victoroliveirab/guess-and-draw#readme"
+  "homepage": "https://github.com/victoroliveirab/guess-and-draw#readme",
+  "dependencies": {
+    "ws": "^7.3.0"
+  }
 }
